# NEXUS-LYNX

./: .cursorrules  .gitignore  .nixpacks.toml  README.md  draft  package-lock.json  package.json  railway.json  tsconfig.json
docs/: .gitkeep  (+2 more)
lynx-ai/: .gitignore  CHANGELOG.md  DEVELOPMENT-STATUS.md  Procfile  README.md  SETUP.md  TEST-RESULTS.md  mcp_agent.config.yaml.example  mcp_agent.secrets.yaml.example  pyproject.toml  pytest.ini  run_tests.ps1  run_tests.sh
lynx-ai/config/: config.yaml.example  secrets.yaml.example
lynx-ai/lynx/: __init__.py  __version__.py  config.py  main.py
lynx-ai/lynx/api/: __init__.py  audit_routes.py  auth.py  chat_routes.py  dashboard.py  dashboard_models.py  draft_routes.py  models.py
lynx-ai/lynx/cli/: status.py
lynx-ai/lynx/core/: __init__.py
lynx-ai/lynx/integration/: __init__.py
lynx-ai/lynx/mcp/: __init__.py  server.py
lynx-ai/lynx/runtime/: __init__.py  daemon.py  dashboard_server.py
lynx-ai/lynx/storage/: __init__.py  draft_storage.py  execution_storage.py  settlement_storage.py
lynx-ai/scripts/: check-test-markers.sh  load-test.py  staging-smoke-test.py  validate_tests.py  verify-test-counts.sh
lynx-ai/tests/: API-TESTING-QUICKSTART.md  README.md  SETUP-TESTING.md  VERIFICATION-COMPLETE.md  __init__.py  conftest.py
lynx-ai/tests/fixtures/: __init__.py
lynx-ai/tests/integration/: __init__.py  test_api_http_level.py  test_audit_completeness.py  test_cell_execution.py  test_cell_mcp_approval_workflow.py  test_cluster_drafts.py  (+22 more)
lynx-ai/ui/: DESIGN-SYSTEM-SETUP.md  README.md  package-lock.json  package.json
(+180 files in other folders)
